RESOLVED FIXED51616
[GTK] Can't find webinspector and error page redirection on Windows
https://bugs.webkit.org/show_bug.cgi?id=51616
Summary [GTK] Can't find webinspector and error page redirection on Windows
Bakhtiar Hasmanan
Reported 2010-12-26 00:57:54 PST
DATA_DIR that use DllMain to find toplevel path only defined in ImageGTK.cpp, other two files affected still return invalid path ($PREFIX): FrameLoaderClientGtk.cpp and InspectorClientGtk.cpp while there should only one DllMain exists.
Attachments
fix DATADIR path (4.72 KB, patch)
2011-01-20 06:39 PST, Bakhtiar Hasmanan
no flags
Patch (6.87 KB, patch)
2012-02-19 10:09 PST, tuxator
no flags
Patch updated with Changelog entry (8.58 KB, patch)
2012-02-19 15:12 PST, tuxator
no flags
Bakhtiar Hasmanan
Comment 1 2011-01-10 13:59:25 PST
I found this trick http://stackoverflow.com/questions/2396328/get-hmodule-from-inside-a-dll and I use it like this (in FrameLoaderClientGtk.cpp): .... #ifdef _WIN32 # include <shlobj.h> # include <assert.h> static HMODULE GetThisDllHandle() { MEMORY_BASIC_INFORMATION info; size_t len = VirtualQueryEx(GetCurrentProcess(), (void*)GetThisDllHandle, &info, sizeof(info)); assert(len == sizeof(info)); return len ? (HMODULE)info.AllocationBase : NULL; } const gchar * get_webkit_datadir(void) { gchar *retval; retval = g_build_filename (g_win32_get_package_installation_directory_of_module (GetThisDllHandle()), "/share", NULL); return retval; } #undef DATA_DIR #define DATA_DIR get_webkit_datadir () #endif .... So far in Win32 it return the correct path, and it doesn't have "initialize once" limitation as DllMain()
Bakhtiar Hasmanan
Comment 2 2011-01-20 06:39:44 PST
Created attachment 79594 [details] fix DATADIR path Umm is this patch legal then?
tuxator
Comment 3 2012-02-19 10:09:02 PST
tuxator
Comment 4 2012-02-19 15:12:02 PST
Created attachment 127744 [details] Patch updated with Changelog entry
Martin Robinson
Comment 5 2012-02-19 19:04:58 PST
Comment on attachment 127744 [details] Patch updated with Changelog entry Great work.
Bakhtiar Hasmanan
Comment 6 2012-02-19 20:03:18 PST
Thanks pawel
WebKit Review Bot
Comment 7 2012-02-19 21:24:30 PST
Comment on attachment 127744 [details] Patch updated with Changelog entry Clearing flags on attachment: 127744 Committed r108206: <http://trac.webkit.org/changeset/108206>
WebKit Review Bot
Comment 8 2012-02-19 21:24:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.