[GTK] Can't find webinspector and error page redirection on Windows https://bugs.webkit.org/show_bug.cgi?id=51616

Source/WebCore:

Create and use an abstraction for finding shared resources on Windows.

Patch by Paweł Forysiuk <tuxator@o2.pl> on 2012-02-19
Reviewed by Martin Robinson.

* platform/FileSystem.h:
(WebCore):
* platform/audio/gtk/AudioBusGtk.cpp:
(WebCore::AudioBus::loadPlatformResource):
* platform/graphics/gtk/ImageGtk.cpp:
(WebCore::getPathToImageResource):
* platform/gtk/FileSystemGtk.cpp:
(WebCore::sharedResourcesPath):
(WebCore):

Source/WebKit/gtk:

Use an abstraction for finding shared resources on Windows.

Patch by Paweł Forysiuk <tuxator@o2.pl> on 2012-02-19
Reviewed by Martin Robinson.

* WebCoreSupport/FrameLoaderClientGtk.cpp:
(WebKit::FrameLoaderClient::dispatchDidFailLoad):
* WebCoreSupport/InspectorClientGtk.cpp:
(WebKit::InspectorClient::inspectorFilesPath):

Canonical link: https://commits.webkit.org/96031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108206 268f45cc-cd09-0410-ab3c-d52691b4dbfc